[FIX] Use SQL Server DB

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=sqlite.db"
+    "DefaultConnection": "Server=localhost;Database=db_skicommerce;User=sa;Password=sqlserver;TrustServerCertificate=true;"
   },
   "ApiUrl": "https://localhost:8000/"
 }
