[FEAT] CustomerBasket and BasketItem Entity

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=db_skicommerce;User=sa;Password=sqlserver;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=db_skicommerce;User=sa;Password=sqlserver;TrustServerCertificate=true;",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:8000/"
 }
