[FEAT] Migrate Identity User

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=db_skicommerce;User=sa;Password=sqlserver;TrustServerCertificate=true;",
+    "IdentityConnection": "Server=localhost;Database=db_skicommerce;User=sa;Password=sqlserver;TrustServerCertificate=true;",
     "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:8000/"
